@@ -6,4 +6,3 @@ copyright_holder = Michael Schout
 [Bootstrap::lib]
 
 [@MSCHOUT]
-use_twitter = 1
