@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::PluginBundle::MSCHOUT
 
 {{$NEXT}}
+    - Disable twitter support. RIP Twitter.
 
 0.39  2023-08-18
     - Remove support for Travis CI
